# Diffuse

./: .gitignore  CMakeLists.txt  README.md  V.txt  Z.txt  matt.txt  matt2.txt  spiral.txt  treewip.txt
Diffuse/: bezier.h  bitmap.h  bspline.h  catmullrom.h  colorpicker.h  curve.h  diffuse.h  lagrange.h  main.cpp  point.h
Diffuse.xcodeproj/: project.pbxproj
Diffuse.xcodeproj/xcuserdata/matt.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Diffuse.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: Diffuse.xcscheme  xcschememanagement.plist
src/: bezier.h  bspline.h  catmullrom.h  colorpicker.cpp  colorpicker.h  curve.h  diffuse.cpp  diffuse.h  image.h  lagrange.h  main.cpp  point.cpp  point.h
src/curves/: bezier.cpp  bezier.h  bspline.cpp  bspline.h  catmullrom.cpp  catmullrom.h  curve.cpp  curve.h  lagrange.cpp  lagrange.h
src/util/: PNGWriter.cpp  PNGWriter.h  Timer.cpp  Timer.h  common.h  escapes.h  types.h
